finalizando page campaign-request versão mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <cure-header
-      options="home,suporter,pharmacy,user,campaign,login"
+      options="home,suporter,pharmacy,user,login"
       origin="main"
     ></cure-header>
     <main>
