--- a/src/pages/campaign-request.html
+++ b/src/pages/campaign-request.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="form-prescription">
-                    <label for="prescription">Faça o upload da receita médica válida. Você ainda deverá apresentar a receita a farmácia quando
+                    <label for="prescription" class="prescription">Faça o upload da receita médica válida. Você ainda deverá apresentar a receita a farmácia quando
                         for retirar o medicamento.</label>
                     <div class="inputContainer" tabindex="0">
                         <label for="" id="file" >Clique aqui ou arrasate para fazer o upload do arquivo </label>
