--- a/src/pages/pharma-form.html
+++ b/src/pages/pharma-form.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <cure-header options="home,suporter,pharmacy,user,campaign,login" origin="page"></cure-header>
+  <cure-header options="home,suporter,pharmacy,user,login" origin="page"></cure-header>
   <main>
     <div class="subscription-pharma-page">
       <div class="pharma-img"></div>
