--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/794c36fe09.js" crossorigin="anonymous"></script>
 </head>
 <cure-header
-    options="home,suporter,pharmacy,user,login"
+    options="home,suporter,pharmacy,user"
     origin="page"
 ></cure-header>
 <body>
