Menu-Hamburguer e Responsividade Pagina Pagamento

--- a/src/pages/pagamento.html
+++ b/src/pages/pagamento.html
@@ -42,13 +42,13 @@
                             prometemos não mandar spam! </legend>
                         <div class="form-email">
                             <label for="email">E-mail: </label>
-                            <input type="email" id="email" class="input-stardard" placeholder="email@dominio.com">
+                            <input type="email" id="email" class="input-stardard" >
                             <p id="email-helper" class="helper-text">Mensagem de ajuda</p>
                         </div>
 
                         <div class="form-tel">
                             <label for="phone">Telefone</label>
-                            <input type="tel" id="phone" class="input-stardard" placeholder="(00)00000000">
+                            <input type="tel" id="phone" class="input-stardard" >
                             <p id="phone-helper" class="helper-text">Mensagem de ajuda</p>
                         </div>
 
@@ -69,18 +69,18 @@
                         <legend>Preencha os dados do cartão de crédito:</legend>
                         <div class="card-input">
                             <label for="name">Nome impresso no cartão</label>
-                            <input type="text" id="name" class="input-stardard" placeholder="Nome cartão" maxlength="25">
+                            <input type="text" id="name" class="input-stardard" maxlength="25">
                         </div>
                         <div class="card-input">
                             <label for="number">Número do cartão</label>
-                            <input type="text" id="number" class="input-stardard" placeholder="0000 0000 0000 0000"
+                            <input type="text" id="number" class="input-stardard"
                                 onkeypress="return isNumeric(event)">
                         </div>
                         <div class="card-input-more">
                             <div class="box-one">
                                 <label for="cvv">CVV
                                     <ion-icon name="information-circle" class="info"></ion-icon></label>
-                                <input type="password" id="cvv" class="input-stardard" placeholder="0000" maxlength="4"
+                                <input type="password" id="cvv" class="input-stardard" maxlength="4"
                                     onkeypress="return isNumeric(event)">
                             </div>
                             <div class="box-two">
